[project]
name = "social-media-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flytekit>=1.14.4",
    "nltk>=3.9.1",
    "praw>=7.8.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "tweepy>=4.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
